# applybrief

./: .gitignore  CHANGELOG.md  INSTALL_NOTES.md  INSTALL_NOTES_WINDOWS.md  LICENSE  NOTICE  PLAN.md  README.md  README.md.bak  install.ps1  install.sh  pyproject.toml  social-posts.md
src/applybrief/: __init__.py  brief.py  cli.py  discover.py  fetcher.py  llm.py  profile.py  render.py
src/applybrief/prompts/: apply_brief.md  contact_extractor.md  intent_extractor.md  jd_parser.md  job_scorer.md  resume_extractor.md
src/applybrief/templates/: brief.html.j2  discoveries.html.j2
